<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.skeleton.util.customview.MaterialEditText
        android:id="@+id/et_email"
        style="@style/signup"
        android:hint="@string/email" />

    <com.skeleton.util.customview.MaterialEditText
        android:id="@+id/et_pass"
        style="@style/signup"
        android:hint="@string/password" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginStart="@dimen/margin_start">

        <CheckBox
            android:id="@+id/cb_remember"
            style="@style/signup"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_end"
            android:gravity="start"
            android:text="@string/remember_me" />

        <TextView
            android:id="@+id/tv_frgt"
            style="@style/signup"
            android:layout_below="@id/cb_remember"
            android:layout_marginEnd="@dimen/button_height_small"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/forgot" />

        <View
            android:layout_width="115dp"
            android:layout_height="1dp"
            android:layout_below="@id/tv_frgt"
            android:layout_marginStart="@dimen/button_height_tall"
            android:background="@color/gray" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_signin"
        style="@style/signup"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginBottom="0dp"
        android:background="@drawable/button_pressed_secondary"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_signinfb"
        style="@style/signup"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:background="@drawable/button_selector_primary_color"
        android:text="@string/signinfb"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>