<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/xxxx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:gravity="start"
                    android:text="@string/name"/>

                <TextView
                    android:id="@+id/tvName"
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:gravity="start"
                    android:text="@string/user_name"/>

                <TextView
                    android:id="@+id/tvUserName"
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/email"/>

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.65"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/street"/>

                <TextView
                    android:id="@+id/tvStreet"
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.65"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.35"
                    android:gravity="start"
                    android:text="@string/phone_number"/>

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.65"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:gravity="start"
                    android:text="@string/company_name"/>

                <TextView
                    android:id="@+id/tvCompanyName"
                    style="@style/defaultTextView"
                    android:layout_width="0dp"
                    android:layout_weight="0.75"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_showUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fafa"
            android:text="@string/show_user_posts"/>

    </LinearLayout>

